--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/materialize.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Reciepe.com</title>
 </head>
 <body>
+    <header>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
     
+    <script src="js/jquery.js"></script>
+    <script src="js/materialize.js"></script>
 </body>
 </html>
