collections completed and parallax image added

--- a/index.html
+++ b/index.html
@@ -137,21 +137,58 @@
                 <div class="divider orange darken-4"></div><br>
         </div>
 
+        <!-- Collections -->
         <div class="container">
             <h2 class="center orange-text text-darken-4">What our customers say...</h2>
-            <div class="collections"></div>
+            <div class="row">
+                <div class="col s12">
+                    <ul class="collection">
+                        <li class="collection-item avatar">
+                            <i class="material-icons circle orange darken-4">person</i>
+                            <h6 class="orange-text text-darken-4">Ryan Kingfisher</h6>
+                            <p>"In life there will be road blocks but we will over come it. Hammock talk come soon. Let's see what chef Dee got that they don't want us to eat "</p>
+                        </li>
+                        <li class="collection-item avatar">
+                            <i class="material-icons circle orange darken-4">person</i>
+                            <h6 class="orange-text text-darken-4">Jessica Ulman</h6>
+                            <p>"In life there will be road blocks but we will over come it. Hammock talk come soon. Let's see what chef Dee got that they don't want us to eat "</p>
+                        </li>
+                        <li class="collection-item avatar">
+                            <i class="material-icons circle orange darken-4">person</i>
+                            <h6 class="orange-text text-darken-4">Olubenga Taiwo</h6>
+                            <p>"In life there will be road blocks but we will over come it. Hammock talk come soon. Let's see what chef Dee got that they don't want us to eat "</p>
+                        </li>
+                        <li class="collection-item avatar">
+                            <i class="material-icons circle orange darken-4">person</i>
+                            <h6 class="orange-text text-darken-4">Kugama Kamastuki</h6>
+                            <p>"In life there will be road blocks but we will over come it. Hammock talk come soon. Let's see what chef Dee got that they don't want us to eat "</p>
+                        </li>
+                        <li class="collection-item avatar">
+                            <i class="material-icons circle orange darken-4">person</i>
+                            <h6 class="orange-text text-darken-4">Lafeez Abdul</h6>
+                            <p>"In life there will be road blocks but we will over come it. Hammock talk come soon. Let's see what chef Dee got that they don't want us to eat "</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
+        <!-- parallax -->
+       <div class="parallax-container">
+            <div class="parallax">
+                <img src="img/cake.jpg" alt="">
+            </div>
+       </div>
         
     </main>
 
     <footer>
-
     </footer>
 
     <script src="js/jquery.js"></script>
     <script src="js/materialize.js"></script>
     <script>
         $(document).ready(function(){
+            $('.parallax').parallax();
             $('.modal').modal();
             $('.sidenav').sidenav();
             $('.slider').slider({});
