Cakes section done

--- a/index.html
+++ b/index.html
@@ -172,10 +172,170 @@
                 </div>
             </div>
         </div>
-        <!-- parallax -->
+        <!-- parallax image -->
        <div class="parallax-container">
             <div class="parallax">
                 <img src="img/cake.jpg" alt="">
+            </div>
+       </div>
+
+       <div class="container">
+            <h2 class="orange-text text-darken-4">Cakes</h2>
+            <p class="flow-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem explicabo quos, veritatis ab tempore enim alias ducimus nesciunt molestias impedit! Consequatur sunt facere excepturi molestiae praesentium amet sit incidunt debitis.</p>
+
+            <!-- Cake cards -->
+             
+            <!-- Cake cards row 1 -->
+            <div class="row">
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/sponge_cake.webp" alt="Sponge Cake" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4">Sponge cake</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Ingredients</a>
+                            <a class="orange-text text-darken-4" href="">Bake Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/velvet_cake.webp" alt="Velvet Cake" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4">Velvet cake</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Ingredients</a>
+                            <a class="orange-text text-darken-4" href="">Bake Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/courgette_cake.webp" alt="Courgette Cake" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4">Courgette cake</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Ingredients</a>
+                            <a class="orange-text text-darken-4" href="">Bake Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+             <!-- Cake cards row 2 -->
+            <div class="row">
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/chocolate_2.webp" alt="Chocolate Cake" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4">Chocolate cake</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Ingredients</a>
+                            <a class="orange-text text-darken-4" href="">Bake Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/coffeeslab_cake.webp" alt="Coffee Slab Cake" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4">Coffee Slab cake</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Ingredients</a>
+                            <a class="orange-text text-darken-4" href="">Bake Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/pistachio_cake.webp" alt="pistachio Cake" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4">pistachio cake</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Ingredients</a>
+                            <a class="orange-text text-darken-4" href="">Bake Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+             <!-- Cake cards row 3 -->
+            <div class="row">
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/polenta_cake.webp" alt="polenta Cake" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4">polenta cake</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Ingredients</a>
+                            <a class="orange-text text-darken-4" href="">Bake Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/buttermilk_cake.webp" alt="buttermilk Cake" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4">buttermilk cake</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Ingredients</a>
+                            <a class="orange-text text-darken-4" href="">Bake Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/chocolate_1.webp" alt="Peanut Cake" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4">Peanut cake</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Ingredients</a>
+                            <a class="orange-text text-darken-4" href="">Bake Now</a>
+                        </div>
+                    </div>
+                </div>
             </div>
        </div>
         
