Chicken section done

--- a/index.html
+++ b/index.html
@@ -507,6 +507,175 @@
                 </div>
             </div>
         </div>
+
+        <!-- parallax Chicken image -->
+        <div class="parallax-container">
+            <div class="parallax">
+                <img src="img/chicken.jpg" alt="">
+            </div>
+        </div>
+
+         <!-- Chicken section -->
+        <div class="container">
+            <h2 class="orange-text text-darken-4">Chicken</h2>
+            <p class="flow-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem id ex repellat, ut laborum aliquid consequuntur asperiores tempora ab totam officiis quos voluptate, harum quod nihil dolor odit explicabo exercitationem. </p>
+
+            <!-- Chicken cards -->
+         
+            <!-- Chicken cards row 1 -->
+            <div class="row">
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/chicken_5.webp" alt="Oreagano Wings" class="responsive-img">
+                        </div>  
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4 bold-text">Oreagano Wings</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Contents</a>
+                            <a class="orange-text text-darken-4" href="">Prepare Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/chicken_11.webp" alt="Mashed Wings" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4 bold-text">Mashed Wings</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Contents</a>
+                            <a class="orange-text text-darken-4" href="">Prepare Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/chicken_1.webp" alt="Buttered Wings" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4 bold-text">Buttered Wings</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Contents</a>
+                            <a class="orange-text text-darken-4" href="">Prepare Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+             <!-- Chicken cards row 2 -->
+            <div class="row">
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/chicken_8.webp" alt="Yoghurt Chicken" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4 bold-text">Yoghurt Chicken</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
+                        </div>
+                        <div class="card-action">
+                        <a class="orange-text text-darken-4" href="">Contents</a>
+                        <a class="orange-text text-darken-4" href="">Prepare Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                     <div class="card-image">
+                            <img src="img/chicken_10.webp" alt="Chicken Tikka" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                                <h6 class="orange-text text-darken-4 bold-text">Chicken Tikka</h6>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                            </div>
+                            <div class="card-action">
+                                <a class="orange-text text-darken-4" href="">Contents</a>
+                                <a class="orange-text text-darken-4" href="">Prepare Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/chicken_2.webp" alt="Chicken Couscous" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4 bold-text">Chicken Couscous</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Contents</a>
+                            <a class="orange-text text-darken-4" href="">Prepare Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    
+            <!-- Chicken cards row 3 -->
+            <div class="row">
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/chicken_15.jpg" alt="Caramel Chicken" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4 bold-text">Caramel Chicken</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste?</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Contents</a>
+                            <a class="orange-text text-darken-4" href="">Prepare Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/ramen.webp" alt="Chicken Ramen" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4 bold-text">Chicken Ramen</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Contents</a>
+                            <a class="orange-text text-darken-4" href="">Prepare Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4 l4">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            <img src="img/saag.webp" alt="Chicken Saag" class="responsive-img">
+                        </div>
+                        <div class="card-content">
+                            <h6 class="orange-text text-darken-4 bold-text">Chicken Saag</h6>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. ill</p>
+                        </div>
+                        <div class="card-action">
+                            <a class="orange-text text-darken-4" href="">Contents</a>
+                            <a class="orange-text text-darken-4" href="">Prepare Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer>
