Footer done (Issue with opyright text)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon.icon" type="image/x-icon">
     <title>Reciepe.com</title>
     <style>
-
+       
     </style>
 </head>
 <body>
@@ -175,7 +175,7 @@
         <!-- parallax cake image -->
        <div class="parallax-container">
             <div class="parallax">
-                <img src="img/cake.jpg" alt="">
+                <img class="responsive-img" src="img/cake.jpg" alt="">
             </div>
        </div>
 
@@ -343,7 +343,7 @@
        <!-- parallax soup image -->
         <div class="parallax-container">
         <div class="parallax">
-            <img src="img/soup.jpg" alt="">
+            <img class="responsive-img" src="img/soup.jpg" alt="">
         </div>
         </div>
 
@@ -511,7 +511,7 @@
         <!-- parallax Chicken image -->
         <div class="parallax-container">
             <div class="parallax">
-                <img src="img/chicken.jpg" alt="">
+                <img class="responsive-img" src="img/chicken.jpg" alt="">
             </div>
         </div>
 
@@ -675,10 +675,31 @@
                 </div>
             </div>
         </div>
-
     </main>
 
-    <footer>
+    <footer class="page-footer">
+        <div class="row black ">
+            <div class="container center-block">
+                <div class="col s6 l3 ">
+                    <img width="70%" class="responsive-img" src="img/logo.png" alt="">
+                    <p class="white-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam odit quam voluptatem blanditiis minus, assumenda deserunt?</p>
+                </div>
+                <div class="col s6 l4 push-l4">
+                    <h4 class="orange-text text-darken-4 ">Quick Links</h4>
+                    <ul>
+                        <li class="white-text">Back to top</li>
+                        <li class="white-text">Cakes</li>
+                        <li class="white-text">Soups</li>
+                        <li class="white-text">Chicken</li>
+                        <li class="white-text">Customers</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright orange darken-4 ">
+       <p class="center white-text"> © 2022 Recipe.com | Busayo </p>
+    </div>
+        
     </footer>
 
     <script src="js/jquery.js"></script>
