copyright text fixed

--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
         </div>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer ">
         <div class="row black ">
             <div class="container center-block">
                 <div class="col s6 l3 ">
@@ -697,7 +697,7 @@
             </div>
         </div>
         <div class="footer-copyright orange darken-4 ">
-       <p class="center white-text"> © 2022 Recipe.com | Busayo </p>
+            <p class="copyright white-text"> © 2022 Recipe.com | Busayo </p> 
     </div>
         
     </footer>
